--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TID_workshop_2013",
-  "version": "0.0.0-1",
+  "version": "0.0.0-2",
   "description": "ERROR: No README.md file found!",
   "main": "server.js",
   "dependencies": {
@@ -8,6 +8,10 @@
   },
   "devDependencies": {},
   "subdomain": "tid-workshop-2013",
+  "domains": [
+    "tidworkshop.org",
+    "www.tidworkshop.org"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
