--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "ERROR: No README.md file found!",
   "main": "server.js",
   "dependencies": {
-    "express": "~3.0.5"
+    "express": "~3.0.5",
+    "request": "~2.16.6",
+    "jade": "latest"
   },
   "devDependencies": {},
   "subdomain": "tid-workshop-2013",
