--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "TID_workshop_2013",
-  "version": "0.0.0-14",
+  "version": "0.0.0-16",
   "description": "ERROR: No README.md file found!",
   "main": "server.js",
   "dependencies": {
     "express": "~3.0.5",
     "request": "~2.16.6",
+    "mongoose": "~3.6.0",
     "jade": "latest"
   },
   "devDependencies": {},
